--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "pixi.js": "^5.2.0"
+  },
   "devDependencies": {
     "@types/node": "^14.0.23",
     "@types/uuid": "^8.0.0",
