--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@
 src/**/*.js
 conf/**/*.js
 node_modules/*
-# asset/static are compiled from source
-asset/static/*
+asset/
+conf/
+server/
+src/main/async/loader.ts
